Update 'j57l75vpl-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:b2f2c26ed936a44ad9ae4c23e5beffe4b4b28303@sha256:efde4ee2c76529e04bac0f5ff3d61cb7afbdea85c3c10a8ac9ac7d50b317b0dc

--- a/components/j57l75vpl-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/j57l75vpl-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j57l75vpl-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:b2f2c26ed936a44ad9ae4c23e5beffe4b4b28303@sha256:efde4ee2c76529e04bac0f5ff3d61cb7afbdea85c3c10a8ac9ac7d50b317b0dc
+          name: container-image
